--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,23 @@
       return <h1>{name}'s Kitchen</h1>
     }
 
-    function Content({ adjective }) {
-      return <section>
-        <p>We serve the most {adjective} food around</p>
-      </section>
+    function Content({ adjective, dishes }) {
+      return <div>
+        <section>
+          <p>We serve the most {adjective} food around</p>
+        </section>
+
+        <section>
+          <p>Our menu is:</p>
+          <Menu dishes={dishes} />
+        </section>
+      </div>
+    }
+
+    function Menu({ dishes }) {
+      return <ul>
+        {dishes.map(({ id, name }) => <li key={id}>{`${name[0].toUpperCase()}${name.substring(1)}`}</li>)}
+      </ul>
     }
 
     function Footer({ year }) {
@@ -28,9 +41,17 @@
     }
 
     function App({ name, adjective }) {
+      const dishes = [
+        { id: 1, name: 'tacos' },
+        { id: 2, name: 'percherone' },
+        { id: 3, name: 'pizza' },
+        { id: 4, name: 'sushi' },
+        { id: 5, name: 'ramen' },
+      ]
+
       return <div>
         <Heading name={name} />
-        <Content adjective={adjective} />
+        <Content adjective={adjective} dishes={dishes} />
         <Footer year={new Date().getFullYear()} />
       </div>
     }
