Displaying images with React

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
 
     function Content({ adjective, dishes }) {
       return <div>
+        <img src="https://images.pexels.com/photos/827528/pexels-photo-827528.jpeg?auto=compress&cs=tinysrgb&w=6000&h=400&dpr=1" alt="restaurant look" />
+
         <section>
           <p>We serve the most {adjective} food around</p>
         </section>
